modified the UI

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,7 +17,18 @@
         <h3>Available Activities</h3>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
-          <p>Loading activities...</p>
+          <div class="activity-card">
+            <h4>Chess Club</h4>
+            <p>Join us for strategic games and tournaments every Tuesday after school.</p>
+            <div class="participants">
+              <h5>Participants</h5>
+              <ul>
+                <li>alice@mergington.edu</li>
+                <li>bob@mergington.edu</li>
+                <li>charlie@mergington.edu</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
 
